--- a/pom.xml
+++ b/pom.xml
@@ -154,5 +154,11 @@
 		    <artifactId>json-schema-validator</artifactId>
 		    <version>3.0.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>2.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
