--- a/pom.xml
+++ b/pom.xml
@@ -160,5 +160,15 @@
 		    <artifactId>json-path</artifactId>
 		    <version>2.0.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.39</version>
+		</dependency>
+		<dependency>
+	         <groupId>org.mybatis</groupId>
+	         <artifactId>mybatis</artifactId>
+	         <version>3.3.0</version>
+      	</dependency>	
 	</dependencies>
 </project>
