--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,29 @@
 	         <groupId>org.mybatis</groupId>
 	         <artifactId>mybatis</artifactId>
 	         <version>3.3.0</version>
-      	</dependency>	
+      	</dependency>
+      	
+      	<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.7.2</version>
+		</dependency>
+  
+	   <dependency>
+	      <groupId>com.fasterxml.jackson.core</groupId>
+	      <artifactId>jackson-databind</artifactId>
+	      <version>2.7.2</version>
+	   </dependency>
+  
+	  <dependency>
+	      <groupId>com.fasterxml.jackson.core</groupId>
+	      <artifactId>jackson-annotations</artifactId>
+	      <version>2.7.2</version>
+	  </dependency>	
+	  <dependency>
+	   <groupId>org.codehaus.jettison</groupId>
+	   <artifactId>jettison</artifactId>
+	   <version>1.1</version>
+	</dependency>
 	</dependencies>
 </project>
