--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         			<runOrder>alphabetical</runOrder>
         			<mainClass>com.EmailTrigger.Sendmail</mainClass>
     			</configuration>
-			</plugin>			
+			</plugin>	      
 		</plugins>		
 	</build>
 	<dependencies>
@@ -189,6 +189,26 @@
 	   <groupId>org.codehaus.jettison</groupId>
 	   <artifactId>jettison</artifactId>
 	   <version>1.1</version>
+	  </dependency>
+	    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-sheets</artifactId>
+      <version>v4-rev549-1.25.0</version>
+    </dependency>
+    <dependency>
+    <groupId>com.google.gdata</groupId>
+    <artifactId>core</artifactId>
+    <version>1.47.1</version>
+	</dependency>
+	<dependency>
+    <groupId>com.google.api-client</groupId>
+    <artifactId>google-api-client</artifactId>
+    <version>1.23.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.oauth-client</groupId>
+	    <artifactId>google-oauth-client-jetty</artifactId>
+	    <version>1.23.0</version>
 	</dependency>
 	</dependencies>
 </project>
