Additional Changes for TAA-248: Release 3.<SP42>.<190109> Creation of Automated Scripts for SEO, Content and DMG Task Progressions
Change-Id: I5accae6881295049b6205ef9775b392d42a4c52d
Signed-off-by: lorraine <lorraine@DTP-312.tlos.local>

--- a/Data/webApp.Compass/Editorial #1_Subtasks.json
+++ b/Data/webApp.Compass/Editorial #1_Subtasks.json
@@ -43,5 +43,10 @@
     "Article Creation",
     "Article Review",
     "Article Submission"
+  ],
+  "Category": [
+    "3rd Party Site Content",
+    "Property Site Content Editing",
+    "Property Submission"
   ]
 }
