Additional changes for IG_Bot

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GQATestAutomation</name>
+	<name>BDDFramework(SMB)</name>
 	<comment></comment>
 	<projects>
 	</projects>
